ingress/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: dashboard.tenberge.io
    external-dns.alpha.kubernetes.io/target: ad22aeec191944660b9470745d2c9c7f-643193371.us-east-1.elb.amazonaws.com
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: dashboard-tls
    hosts:
    - dashboard.tenberge.io
  rules:
  - host: dashboard.tenberge.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
